--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,7 @@ body {
     position: relative;
     width: 300px;
     height: 100%;
-    background: url(../img/bg2.png) 100% 0;
+    background: url(/img/bg2.png) 100% 0;
     background-size: cover;
     color: #f7f7f7;
 }
