--- a/views/photo.html
+++ b/views/photo.html
@@ -2,11 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0; user-scalable=no;">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <span>{{name}}</span>
+    <button id="btn">登录</button>
+    <button id="getUserInfo">获取用户信息</button>
+    <script>
+        $('#btn').click(function() {
+            $.ajax({
+                // beforeSend: function(request) { 
+                //     request.setRequestHeader('Authorization', window.localStorage.getItem('token')); 
+                // },
+                url: '/login',
+                type: 'post',
+                data: {
+                    id: 'fsfy78fsdy76d9sf9d79',
+                    username: 'chandler',
+                    password: '597649635.cdjiii'
+                }
+            })
+            .done(function(data) {
+                console.log(data.msg);
+                window.localStorage.setItem('token', data.token);
+            })
+        });
+        $("#getUserInfo").click(function() {
+            $.ajax({
+                beforeSend: function(request) { 
+                    request.setRequestHeader('Authorization', window.localStorage.getItem('token')); 
+                },
+                url: '/getUseInfo',
+                type: 'post',
+            })
+            .done(function(data) {
+                console.log(data);
+            })
+        });
+    </script>
+    <!-- <body>
+    <h1>{{title}}</h1>
+    <p>循环：</p>
+    <ul>
+        {% for key,value in food %}
+        <li>{{key}} -  {{value}}</li>
+        {%endfor%}
+    </ul>
+    </body> -->
 </body>
 </html>
