--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,38 +1,3 @@
-body, ul, h1, h2, h3, p {
-    margin: 0;
-    padding: 0;
-}
-a {
-    text-decoration: none;
-    color: inherit;
-}
-img {
-    border: none;
-    vertical-align: top;
-}
-ul {
-    list-style: none;
-}
-.clear {
-    zoom: 1;
-}
-.clear:after {
-    content: '';
-    display: block;
-    clear: both;
-}
-html, body {
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-}
-html {
-    font-size: 62.5%;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-body {
-    font-family: Arial, 'Microsoft YaHei';
-}
 .mask:before {
     content: '';
     position: absolute;
@@ -57,7 +22,7 @@ body {
     display: table;
     float: left;
     position: relative;
-    width: 300px;
+    width: 22%;
     height: 100%;
     background: url(/img/bg2.png) 100% 0;
     background-size: cover;
@@ -154,16 +119,16 @@ body {
     right: 0;
     top: -100%;
 }
-.nav-outer:hover:before {
+.nav-outer:hover:before, .nav-outer.act:before {
     left: 0;
 }
-.nav-outer:hover .nav-inner:before {
+.nav-outer:hover .nav-inner:before, .nav-outer.act .nav-inner:before {
     right: 0;
 }
-.nav-outer:hover:after {
+.nav-outer:hover:after, .nav-outer.act:after {
     top: 0;
 }
-.nav-outer:hover .nav-inner:after {
+.nav-outer:hover .nav-inner:after, .nav-outer.act .nav-inner:after {
     top: 0;
 }
 #nav-menu li i {
@@ -193,11 +158,11 @@ body {
 #contact-box i:hover {
     transform: scale(1.2);
 }
-
+/* 主板块 */
 #article-box {
     float: left;
     position: relative;
-    width: calc(100% - 300px);
+    width: 78%;
     height: 100%;
     box-sizing: border-box;
     padding: 3rem 2rem 0;
@@ -215,10 +180,9 @@ body {
     padding: 1.5rem 2rem;
     background-color: #393e46;
     color: #f7f7f7;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
     transition: .2s;
-    cursor: pointer;
     border-left: 0 solid #f7f7f7;
     margin-bottom: 6rem;
     transition: .5s;
@@ -235,12 +199,24 @@ body {
     height: 2rem;
     line-height: 2rem;
     padding-left: 1rem;
-    padding-right: 1.42rem;
+    padding-right: 1rem;
     background-color: #f7f7f7;
     color: #393e46;
     font-size: 1.3rem;
     left: 2.5rem;
     top: -3.44rem;
+}
+.art-time:after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-width: 1rem;
+    border-style: solid;
+    border-color: transparent;
+    border-right-color: #f7f7f7;
+    left: -2rem;
+    top: 0;
 }
 .art-dotts {
     position: absolute;
@@ -252,31 +228,23 @@ body {
     left: -.78rem;
     top: -2.9rem;
 }
-.art-time i {
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-width: 1rem;
-    border-style: solid;
-    border-color: transparent;
-    border-right-color: #f7f7f7;
-    left: -2rem;
-    top: 0;
-}
 .art-main {
     display: block;
 }
 .art-wrap {
-
+    display: block;
+    text-align: right;
+    position: relative;
 }
 .article-item .art-info {
-    float: left;
+    position: absolute;
     width: 80%;
-    box-sizing: border-box;
+    height: 100%;
+    text-align: left;
 }
 /* 附图 */
 .article-item .art-img {
-    float: right;
+    display: inline-block;
     width: 15%;
     max-width: 100px;
     min-width: 40px;
@@ -290,7 +258,9 @@ body {
 }
 /* 标题 */
 .article-item .art-title {
-    font-size: 2rem;
+    position: absolute;
+    width: 100%;
+    font-size: 1.8rem;
     font-weight: bold;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -298,39 +268,87 @@ body {
 }
 /* 前言 */
 .article-item .art-note {
-    font-size: 1.6rem;
-    margin-top: 1.5rem;
+    position: relative;
+    font-size: 1.3rem;
+    line-height: 1.8rem;
+    box-sizing: border-box;
+    padding-top: 3.1rem;
+    height: 100%;
     color: #c8c8c8;
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-align: justify;
+}
+/* 附属信息 */
+.article-item .art-meta {
+    display: flex;
+    font-size: 1.2rem;
+    line-height: 1.4rem;
     white-space: nowrap;
+}
+.article-item .art-meta > a {
+    margin-right: 3rem;
+    letter-spacing: .005rem;
+}
+/* 点赞 */
+.art-heart {
+    position: relative;
+}
+.art-heart span {
+    padding-left: 14px;
+}
+.heart {
+    position: absolute;
+    width: 30px;
+    height: 35px;
+    left: -10px;
+    top: -1.2rem;
+    background: url(/img/heart.png);
+    background-repeat: no-repeat;
+    cursor: pointer;
+    z-index: 1000;
+    background-size: 3900%;
+    background-position-x: -6px;
+    background-position-y: -1px;
+}
+@keyframes heartBlast {
+    0% {
+        background-position-x: -6px;
+    } 100% {
+        background-position-x: -1136px;
+    }
+}
+.heart.heartBlast {
+    display: inline-block;
+    animation-name: heartBlast;
+    animation-duration: .8s;
+    animation-iteration-count: 1;
+    animation-timing-function: steps(28);
+    background-position-x: -1136px;
+}
+/* 评论图标 */
+.comment-icon {
+    font-size: 1.2rem;
 }
 @media screen and (max-width: 600px) {
     .article-item .art-title {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
     .article-item .art-note {
-        font-size: 1.4rem;
-        margin-top: 1rem;
+        line-height: 1.6rem;
+        padding-top: 2.8rem;
     }
-    .article-item .art-img {
-        width: 15%;
+}
+@media screen and (max-width: 570px) {
+    .article-item .art-meta {
+        margin-top: .6rem;
+    }
+    .article-item .art-meta > a {
+        margin-right: 2rem;
     }
 }
 @media screen and (max-width: 450px) {
-    .article-item .art-title {
-        font-size: 1.6rem;
-    }
-    .article-item .art-note {
-        margin-top: 1.2rem;
-    }
-    .article-item .art-img {
-        width: 19%;
-    }
-}
-@media screen and (max-width: 400px) {
     #article-box {
-        padding: 2.5rem 1.5rem 0;
+        padding: 2rem 1.3333rem 0;
     }
     .article-item {
         padding: 1.2rem 1.5rem;
@@ -339,8 +357,21 @@ body {
         font-size: 1.4rem;
     }
     .article-item .art-note {
+        font-size: 1.2rem;
+        line-height: 1.5rem;
+        padding-top: 2.4rem;
+    }
+}
+@media screen and (max-width: 400px) {
+    .article-item .art-title {
+        /* font-size: 1.4rem; */
+    }
+    .article-item .art-note {
         font-size: 1rem;
-        margin-top: .5rem;
+        padding-top: 2.6rem;
+    }
+    .article-item .art-meta {
+        font-size: 1rem;
     }
 }
 
