--- a/index/views/index.html
+++ b/index/views/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{title}}</title>
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="img/logo.icon" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
@@ -15,10 +16,10 @@
         <div id="intrude-cnt">
             <!-- 头像 -->
             <div id="head-portrait" class="mask">
-                <img src="img/1.png" alt="Chandler">
+                <img src="img/1.png" alt="chandler">
             </div>
             <!-- 昵称 -->
-            <h1 id="author" title="web前端工程师博客">Chandler</h1>
+            <h1 id="author" title="web前端工程师博客">chandler</h1>
             <!-- 介绍 -->
             <h2 id="intrude-text" title="web前端工程师博客">hello，欢迎光临我的博客~</h2>
             <!-- 导航 -->
@@ -95,106 +96,7 @@
                             <i class="comment-icon fa fa-comment"></i>
                             <span>评论(20)</span>
                         </a>
-                        <a href="#" class="art-tag">
-                            <i class="fa fa-tag"></i>
-                            <span>javascript</span>
-                        </a>    
-                    </div>
-                </div>
-            </article>
-            <article class="article-item">
-                <time class="art-time">
-                    2018-08-25
-                </time>
-                <b class="art-dotts"></b>
-                <div href="#" class="art-main">
-                    <a href="http://www.baidu.cn" class="art-wrap">
-                        <div class="art-info">
-                            <h2 class="art-title">这是博客的标题</h2>
-                            <h3 class="art-note" title="这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点">
-                                <span>这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点</span>
-                            </h3>
-                        </div>
-                        <div class="art-img">
-                            <img src="img/1.jpg" alt="图片">
-                        </div>
-                    </a>
-                    <div class="art-meta">
-                        <a href="#" class="art-heart" title="i lile it">
-                            <i class="heart"></i>
-                            <span>喜欢(500)</span>
-                        </a>
-                        <a href="#" class="art-comment" title="评论">
-                            <i class="comment-icon fa fa-comment"></i>
-                            <span>评论(20)</span>
-                        </a>
-                        <a href="#" class="art-tag">
-                            <i class="fa fa-tag"></i>
-                            <span>javascript</span>
-                        </a>    
-                    </div>
-                </div>
-            </article>
-            <article class="article-item">
-                <time class="art-time">
-                    2018-08-25
-                </time>
-                <b class="art-dotts"></b>
-                <div href="#" class="art-main">
-                    <a href="http://www.baidu.cn" class="art-wrap">
-                        <div class="art-info">
-                            <h2 class="art-title">这是博客的标题</h2>
-                            <h3 class="art-note" title="这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点">
-                                <span>这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点</span>
-                            </h3>
-                        </div>
-                        <div class="art-img">
-                            <img src="img/1.jpg" alt="图片">
-                        </div>
-                    </a>
-                    <div class="art-meta">
-                        <a href="#" class="art-heart" title="i lile it">
-                            <i class="heart"></i>
-                            <span>喜欢(500)</span>
-                        </a>
-                        <a href="#" class="art-comment" title="评论">
-                            <i class="comment-icon fa fa-comment"></i>
-                            <span>评论(20)</span>
-                        </a>
-                        <a href="#" class="art-tag">
-                            <i class="fa fa-tag"></i>
-                            <span>javascript</span>
-                        </a>    
-                    </div>
-                </div>
-            </article>
-            <article class="article-item">
-                <time class="art-time">
-                    2018-08-25
-                </time>
-                <b class="art-dotts"></b>
-                <div href="#" class="art-main">
-                    <a href="http://www.baidu.cn" class="art-wrap">
-                        <div class="art-info">
-                            <h2 class="art-title">这是博客的标题</h2>
-                            <h3 class="art-note" title="这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点">
-                                <span>这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点这是简介站位文字要长一点</span>
-                            </h3>
-                        </div>
-                        <div class="art-img">
-                            <img src="img/1.jpg" alt="图片">
-                        </div>
-                    </a>
-                    <div class="art-meta">
-                        <a href="#" class="art-heart" title="i lile it">
-                            <i class="heart"></i>
-                            <span>喜欢(500)</span>
-                        </a>
-                        <a href="#" class="art-comment" title="评论">
-                            <i class="comment-icon fa fa-comment"></i>
-                            <span>评论(20)</span>
-                        </a>
-                        <a href="#" class="art-tag">
+                        <a href="#" class="art-tag" title="博客标签">
                             <i class="fa fa-tag"></i>
                             <span>javascript</span>
                         </a>    
